# pythonlabs

./: pyproject.toml
pylabs/: __main__.py
pylabs/datasc/apiserviceconsumer/linguee/: Dictlinguee.py
pylabs/datasc/dfops/: DataOps.py
pylabs/datasc/oops/: decoratorlab.py
pylabs/datasc/utils/: funcsutils.py
