[tool.poetry]
name = "pylabs"
version = "0.1.0"
description = ""
authors = ["Parth Thakkar <parth.techblogs@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.30.6"
fastapi = "^0.114.1"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
